AMBARI-651. Fix issues with the footer overlapping page content due to uncleared floats (Contributed by yusaku)
git-svn-id: https://svn.apache.org/repos/asf/incubator/ambari/trunk@1363212 13f79535-47bb-0310-9956-ffa450edef68

--- a/hmc/css/app.css
+++ b/hmc/css/app.css
@@ -1112,6 +1112,7 @@ span.installationWizardStageNumber {
 #serviceManagementCoreDivId {
   width: 400px;
   margin-left:20px;
+  margin-bottom:40px;
 }
 
 .serviceManagementGroup {
